porting to java modules